<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <View
        android:id="@+id/view_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/red" />

    <ImageView
        android:id="@+id/image_all_incluse"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_all_incluse"
        app:layout_constraintEnd_toStartOf="@id/image_happy"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_happy"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_happy"
        app:layout_constraintEnd_toStartOf="@id/image_sunny"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/image_all_incluse"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_sunny"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/image_happy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_hello_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/cabin"
        android:text="@string/hello_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_view"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textview_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/phrases"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center" />

    <View
        android:layout_width="100dp"
        android:layout_height="4dp"
        app:layout_constraintTop_toBottomOf="@id/textview_phrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/red" />


    <Button
        android:id="@+id/btn_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_new_phrase"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>